Relate y = BX to ols to least squares to mse

--- a/notebookes/LinearRegressionMatrix.ipynb
+++ b/notebookes/LinearRegressionMatrix.ipynb
@@ -253,6 +253,8 @@
         "$$\n",
         "With these being said,  finding coefficient in a linear regression is to find the unknown (p + 1) dimensional vector $\\beta$ in the equation $\\tilde{X} \\beta =  y$ , where $\\beta$ and $y$ are both vecotrs.\n",
         "\n",
+        "Just to make it a bit easier, we rename $\\tilde{X}$ to X again. So by referring to $X$ we reffer to the augmented X.\n",
+        "\n",
         "\n",
         "\n"
       ],
@@ -263,7 +265,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Solve \" X β = y\"\n",
+        "### Solve \" X β + ϵ= y\"\n",
         "There is two linear algebraic interpretations of this:\n",
         "\n",
         "**First algebraic view**\n",
@@ -345,30 +347,41 @@
         "**Solution**\n",
         "\n",
         "\n",
-        "Let's solve this if they were no erro and uncertainty.\n",
-        "If y is in column space of $\\tilde{X}$, the solution is ::\n",
+        "Let's solve $y = \\beta X$ with no error term.\n",
+        "If y is in column space of $X$, the solution is :\n",
+        "\n",
+        "$${\\displaystyle {\\widehat {\\beta }}=(X^{\\operatorname {T} }X)^{-1}X^{\\operatorname {T} }y}$$\n",
+        "\n",
+        "In context of linear regression, $\\widehat{ \\beta}$ is called [**ordinary least squares estimator**](https://en.wikipedia.org/wiki/Gauss%E2%80%93Markov_theorem).\n",
+        "\n",
+        "In fact under some assumption it is the BEST estimator. But what are those assumption and why is it so greate a estimator.\n",
+        "The assumptions\n",
+        "\n",
+        "2. $\\epsilon_i$ has mean zero.\n",
+        "3. $\\epsilon_i$ has same variance for all i: ${\\displaystyle \\operatorname {Var} (\\varepsilon _{i})=\\sigma ^{2}<\\infty }$\n",
+        "4. Distinct error terms are uncorrelated\n",
         "\n",
         "\n",
-        "HERE!!! what is the solution for no error case? fix below\n",
+        "In what sense is $ {\\widehat {\\beta }}$ the best estimator? First of all, it is best estimator among all linear and unbiased ones. That means\n",
+        "1. $ {\\widehat {\\beta }}$ is linear in y ( i.e., ${\\displaystyle {\\widehat {\\beta }}_{j}=c_{1j}y_{1}+\\cdots +c_{nj}y_{n}}$)\n",
+        "2. Being unbiased means ${\\displaystyle \\operatorname {E} \\left[{\\widehat {\\beta }}_{j}\\right]=\\beta _{j}}$. We demonstrate it with data in a bit\n",
         "\n",
-        "A question arise that why this solution needs $\\beta$  to be in the column space of $\\tilde{X}$? Can't we just use the formula?\n",
+        "The best linear unbiased estimator (BLUE) of the vector\n",
+        "${\\displaystyle \\beta }$ of parameters\n",
+        "${\\displaystyle \\beta _{j}}$ is one with the smallest mean squared error for every vector ${\\displaystyle \\lambda }$ of linear combination parameters. This is equivalent to the condition that (HERE!!! i didn't understand this from wikipedia)\n",
+        "\n",
+        "$${\\displaystyle \\operatorname {Var} \\left({\\widetilde {\\beta }}\\right)-\\operatorname {Var} \\left({\\widehat {\\beta }}\\right)}$$\n",
         "\n",
         "\n",
-        "Actually, if \\(b\\) is not in the column space of \\(X\\) and you try to compute \\(bX^{-1}\\) as a solution when \\(X\\) is a square and invertible matrix, the situation is different than you might expect.\n",
+        "It turns out that the OLS estimator which is the best linear unbiased estimator  **Also** minimizes the sum of squares of residuals. Text books usually start with finding an estimator that minimizes the squares of residuals without explaining the BLUE.\n",
         "\n",
-        "Here’s a breakdown:\n",
         "\n",
-        "1. **Square and Invertible \\(X\\)**:\n",
-        "   - When \\(X\\) is square (n=p) and invertible, \\(bX^{-1}\\) is a valid computation and will give a vector \\(a\\).\n",
-        "   - In this specific case, every \\(b\\) is always in the column space of \\(X\\), because an invertible matrix transforms the entire space. That is, the column space of an invertible \\(n \\times n\\) matrix \\(X\\) is \\(R^n\\), the entire n-dimensional space.\n",
-        "   - Therefore, for invertible \\(X\\), the equation \\(aX = b\\) always has a solution \\(a = bX^{-1}\\), regardless of \\(b\\).\n",
         "\n",
-        "2. **Non-Square or Non-Invertible \\(X\\)**:\n",
-        "   - If \\(X\\) is not square or not invertible (meaning \\(X\\) does not cover all of \\(R^n\\) or maps some vectors to zero), then the product \\(bX^{-1}\\) isn’t generally possible since \\(X^{-1}\\) does not exist.\n",
-        "   - In such cases, \\(b\\) needs to be checked against the column space of \\(X\\) if \\(X\\) is non-square. If \\(b\\) is not in the column space of \\(X\\), then there is no solution because there's no \\(a\\) that can multiply with \\(X\\) to yield \\(b\\).\n",
-        "   - For non-invertible \\(X\\), you would typically use the Moore-Penrose pseudoinverse \\(X^+\\) to find a least squares solution \\(a = bX^+\\), but this only minimizes \\(||aX - b||\\) and does not necessarily solve \\(aX = b\\) exactly unless \\(b\\) is in the column space of \\(X\\).\n",
+        "The OLS estimator also  maximizes the likelihood function (whatever that is) when the random errors are assumed to have normal distributions with the same variance.\n",
         "\n",
-        "If you meant that \\(bX^{-1}\\) is an answer even if \\(b\\) is not in the column space, that situation doesn’t arise with square, invertible matrices because \\(b\\) will always be in the column space due to the properties of invertible matrices. If \\(X\\) is non-invertible or non-square, the inverse \\(X^{-1}\\) does not exist, and other methods like pseudoinverses or least squares solutions are used depending on the specifics of \\(X\\) and \\(b\\).\n"
+        "Statisticians typically motivate ordinary least squares by the [principle of maximum likelihood](https://en.wikipedia.org/wiki/Gauss%E2%80%93Markov_theorem)  because of this feature.\n",
+        "\n",
+        "HERE!!! use the loaded data to show XTX effect."
       ],
       "metadata": {
         "id": "cwhNfPNNkFAH"
