Solve X \beta = y with projection

--- a/notebookes/LinearRegressionMatrix.ipynb
+++ b/notebookes/LinearRegressionMatrix.ipynb
@@ -347,11 +347,32 @@
         "**Solution**\n",
         "\n",
         "\n",
-        "Let's solve $y = \\beta X$ with no error term.\n",
-        "If y is in column space of $X$, the solution is :\n",
+        "Let's solve $y = X \\beta $ with no error term.\n",
         "\n",
+        "There are multiple ways you can arrive at that. There is one that tries to minimize the $||Ax -b ||$ using deravitive. (the machine learning book)\n",
+        "\n",
+        "My favorite is one that uses some linear algebraic magic.\n",
+        "I break it to three observations:\n",
+        "1. if y is not in column space of X, we can find closest $\\hat{y}$ that is in the span.\n",
+        "2. To find such $\\hat{y}$ we can use a matrix that project any vector to vector space made by span of columns of X.\n",
+        "3. Finding such matrix really depends on X features For example if X is a square matrix with all orthogonal columns, no such projection is needed cause X spans the whole dimension. If X has orthogonal columns but not square, that projection is $XX^T$. In general case it is $X(X^TX)^{-1}X^T$. The proof has to do with svd and stuff\n",
+        "4. With all this, instead of finding $\\beta$ which is impossible, we set out to find $\\hat{\\beta}$ in $\\hat{y} = X(X^TX)^{-1}X^T y =  X \\hat{\\beta}$.\n",
+        "\n",
+        "5. While $X(X^TX)^{-1}X^T y =  X \\hat{\\beta}$ might have multiple solution, one trivial solution is $\\hat{\\beta} = (X^TX)^{-1}X^T y$ by removing X from the right and left side(easier way to arrive at it?what if y is in column space of X? does it simplify? see with data)\n",
+        "Now lets sample a set and try these matrices. HERE!!!\n",
+        "**sources**\n",
+        "1. https://en.wikipedia.org/wiki/Projection_(linear_algebra)#Formulas\n",
+        "2. https://www-users.cse.umn.edu/~rejto/4242/4242_2final_sol3.pdf\n",
+        "3. https://math.stackexchange.com/questions/1816364/the-svd-solution-to-linear-least-squares-linear-system-of-equations\n",
+        "\n",
+        "\n",
+        "HERE!!!\n",
+        "we arrive at:\n",
         "$${\\displaystyle {\\widehat {\\beta }}=(X^{\\operatorname {T} }X)^{-1}X^{\\operatorname {T} }y}$$\n",
         "\n",
+        "### what motivates $||Ax -b ||$ as a loss function\n",
+        "\n",
+        "If you like to see more reasoning behind why we picked $||Ax -b ||$ as lose function, I can add some more to it. HERE!!!\n",
         "In context of linear regression, $\\widehat{ \\beta}$ is called [**ordinary least squares estimator**](https://en.wikipedia.org/wiki/Gauss%E2%80%93Markov_theorem).\n",
         "\n",
         "In fact under some assumption it is the BEST estimator. But what are those assumption and why is it so greate a estimator.\n",
