Organize text and Construct X

--- a/notebookes/LinearRegressionMatrix.ipynb
+++ b/notebookes/LinearRegressionMatrix.ipynb
@@ -49,10 +49,71 @@
         "!git config --global user.name \"Amineh Dadsetan\""
       ],
       "metadata": {
-        "id": "19DE6S_AX97z"
+        "id": "19DE6S_AX97z",
+        "outputId": "c8b0971f-60e7-4771-c414-82fb2b4b8f3c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "fatal: cannot change to 'AminehTechnicalWritings': No such file or directory\n",
+            "Cloning into 'AminehTechnicalWritings'...\n",
+            "remote: Enumerating objects: 323, done.\u001b[K\n",
+            "remote: Counting objects: 100% (182/182), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (90/90), done.\u001b[K\n",
+            "remote: Total 323 (delta 107), reused 152 (delta 89), pack-reused 141\u001b[K\n",
+            "Receiving objects: 100% (323/323), 3.60 MiB | 10.12 MiB/s, done.\n",
+            "Resolving deltas: 100% (186/186), done.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%load_ext autoreload\n",
+        "%autoreload 2\n",
+        "import sys\n",
+        "sys.path.insert(1, '/content/AminehTechnicalWritings/src')\n",
+        "import sampling_utils as su"
+      ],
+      "metadata": {
+        "id": "5j4eSlknAHha"
+      },
+      "execution_count": 2,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "population = su.get_population(local_clone + '/data/population.npz')\n",
+        "population.shape"
+      ],
+      "metadata": {
+        "id": "0W6vmWNrAOcm",
+        "outputId": "7ef2526a-9ae5-4691-cc22-80601d2c932f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(300000, 2)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -349,13 +410,42 @@
         "\n",
         "Let's solve $y = X \\beta $ with no error term.\n",
         "\n",
-        "There are multiple ways you can arrive at that. There is one that tries to minimize the $||Ax -b ||$ using deravitive. (the machine learning book)\n",
+        "There are multiple ways you can arrive at that. There is one that tries to minimize the $||Ax -b ||$ using deravitive.\n",
         "\n",
         "My favorite is one that uses some linear algebraic magic.\n",
         "I break it to three observations:\n",
-        "1. if y is not in column space of X, we can find closest $\\hat{y}$ that is in the span.\n",
-        "2. To find such $\\hat{y}$ we can use a matrix that project any vector to vector space made by span of columns of X.\n",
+        "1. The equation have a solution if and only if $y$ is in the column space of $X$.\n",
+        "1. If y is not in column space of X, we can find closest $\\hat{y}$ that is in the span of columns of $X$ and solve the equation for that. Intuitively it makes sense that would minimize $||Ax -b ||$.\n",
+        "2. To find such $\\hat{y}$ we can use a matrix that project any vector to vector space made by span of columns of X. This matrix is a change of basis to the basis of column space of $X$ anyway.\n",
+        "\n",
         "3. Finding such matrix really depends on X features For example if X is a square matrix with all orthogonal columns, no such projection is needed cause X spans the whole dimension. If X has orthogonal columns but not square, that projection is $XX^T$. In general case it is $X(X^TX)^{-1}X^T$. The proof has to do with svd and stuff\n",
+        "\n",
+        "Lets pick a fairly big sample from population data set and construct X so as to calculate the projection matrix.\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "cwhNfPNNkFAH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "sampler = su.PopulationSampler(population)\n",
+        "x_samp_index, x_samples = sampler.set_sample_xs(100)\n",
+        "X = np.c_[np.ones(100), x_samples]"
+      ],
+      "metadata": {
+        "id": "OSu41WDF_GAe"
+      },
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "4. With all this, instead of finding $\\beta$ which is impossible, we set out to find $\\hat{\\beta}$ in $\\hat{y} = X(X^TX)^{-1}X^T y =  X \\hat{\\beta}$.\n",
         "\n",
         "5. While $X(X^TX)^{-1}X^T y =  X \\hat{\\beta}$ might have multiple solution, one trivial solution is $\\hat{\\beta} = (X^TX)^{-1}X^T y$ by removing X from the right and left side(easier way to arrive at it?what if y is in column space of X? does it simplify? see with data)\n",
@@ -368,8 +458,15 @@
         "\n",
         "HERE!!!\n",
         "we arrive at:\n",
-        "$${\\displaystyle {\\widehat {\\beta }}=(X^{\\operatorname {T} }X)^{-1}X^{\\operatorname {T} }y}$$\n",
-        "\n",
+        "$${\\displaystyle {\\widehat {\\beta }}=(X^{\\operatorname {T} }X)^{-1}X^{\\operatorname {T} }y}$$"
+      ],
+      "metadata": {
+        "id": "dwygEhfQ_ky0"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "### what motivates $||Ax -b ||$ as a loss function\n",
         "\n",
         "If you like to see more reasoning behind why we picked $||Ax -b ||$ as lose function, I can add some more to it. HERE!!!\n",
@@ -405,7 +502,14 @@
         "HERE!!! use the loaded data to show XTX effect."
       ],
       "metadata": {
-        "id": "cwhNfPNNkFAH"
+        "id": "lTtJjTtS_FI1"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "Jsg_jA34--Zm"
       }
     },
     {
