Reorganize text for matrix notation

--- a/notebookes/LinearRegressionMatrix.ipynb
+++ b/notebookes/LinearRegressionMatrix.ipynb
@@ -19,6 +19,7 @@
         "- Body\n",
         "  - Linear regression is solving linear equations approximately.\n",
         "     - Matrix notation of linear regression equations.\n",
+        "     - Switch to a different vector space\n",
         "     - Solve \" X β = y\"\n",
         "  - How to solve uncertain set of linear equations?\n",
         "  - The line fitting.\n",
@@ -239,9 +240,8 @@
       "source": [
         "### Matrix notation of linear regression.\n",
         "\n",
-        "However, we have not used matrix notation yet. We have considered given sample as a set of size n.\n",
-        "In contrast, using matrix notation would mean viewing a sample for a given feature,  as a single data point with n-dimensions and not a set anymore. You'll get p, n-dimensional vectors. You could also view a sample as n p-dimensinal vectors. But wait on that a bit.\n",
-        "Using matrix notation: 🦣\n",
+        "Samples are a set of tuples. To use linear algebra, we can switch to their notations, which is vectors and matrices.\n",
+        "Each predictor can be viewed as a row vector, (e.g, $x_i = [ x_{i,1}, ..., x_{ip}]^T$.)  . It means predictors are n vecotres each of p dimensions. You can even stack them on top of each other: 🦣\n",
         "$$\n",
         "y =\n",
         "\\begin{bmatrix}\n",
@@ -271,6 +271,8 @@
         "\\end{bmatrix}\n",
         "+ ϵ$$\n",
         "\n",
+        "You can see that the intercept is a vector that is n-times repeatition of $\\beta_0$ ( a bit awkward 🤷).\n",
+        "\n",
         "A tiny trick helps putting $\\beta_0$ with rest of $\\beta_i$'s. At least help visually. 🎉 🧙\n",
         "$$\n",
         "y =\n",
@@ -297,9 +299,8 @@
         "1 & x_{n1} & x_{n2} & \\ldots & x_{np}\n",
         "\\end{bmatrix}\n",
         "$$\n",
-        "With these being said,  finding coefficient in a linear regression is to find the unknown (p + 1) dimensional vector $\\beta$ in the equation $\\tilde{X} \\beta =  y$ , where $\\beta$ and $y$ are both vecotrs.\n",
-        "\n",
-        "Just to make it a bit easier, we rename $\\tilde{X}$ to X again. So by referring to $X$ we reffer to the augmented X.\n"
+        "Just to make it a bit easier, we rename $\\tilde{X}$ to X again. So by referring to $X$ we reffer to the augmented X.\n",
+        "\n"
       ],
       "metadata": {
         "id": "lOKRikQQJdV6"
@@ -308,31 +309,13 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Solve \" X β + ϵ= y\"\n",
-        "There is two linear algebraic interpretations of this:\n",
+        "### Swtich  to a different vector space :)\n",
         "\n",
-        "**First algebraic view**\n",
+        "With these being said,  finding coefficient in a linear regression is to find the unknown (p + 1) dimensional vector $\\beta$ in the equation $\\tilde{X} \\beta =  y$ , where $\\beta$ and $y$ are both vecotrs.\n",
         "\n",
-        "The first algebraic view can be that there is n vectors, each p + 1 dimensions. For $ 1< i < n$ , $x_i = [y_i, x_{i,1}, ..., x_{ip}]^T$.\n",
+        "Now we are looking for a plane with p dimensions that all x_i exists on it. consequently you are looking for p + 1 scalars that identify such plain and are coefficients $\\beta$.\n",
         "\n",
-        "\n",
-        "But you are not looking for linear combinations of x_i's to equal to equal to y. In fact you are looking for a plane with p dimensions that all x_i exists on it. consequently you are looking for p scalars that identify such plain.\n",
-        "So we are hoping they all fall on a p dimensional plane becuase we think there are p basis that can span all n points. However the p dimensional plain doesnt have to pass vector 0, so we need p + 1 such scalars to determine where  the plain meets y axes for when all x's are 0.\n",
-        "these  p + 1 numbers are going to determine such plain.\n",
-        "\n",
-        "while it is nice to visualize the data point using second view, we mainly use the first view to solve the system of equations. Let's find such hyperplane for our sample data points ( or n vectors of 2-dimensional )\n",
-        "\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "Pxpe3yEJhAt_"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "**Second algebraic view**\n",
-        "Second interpretation is to have $p$ n-dimensional vectors where $\\mathbf{x}_0 = [1, 1, ..., 1]^T$ and for $j >0 $, $\\mathbf{x}_j = [x_{1i}, \\ldots, x_{nj}]^T$. Then one can expand the above formula to: 🤯\n",
+        "The good thing about matrix notation is that you can instantly switch to a second view of data. So, instead of looking at n of $p + 1$ dimensional data point, you can look at each column as a data point. Then you end up with (p + 1) of  n-dimensional data points. Equations would change to follow\n",
         "\n",
         "$$\n",
         "y =\n",
@@ -370,18 +353,64 @@
         "x_{np}\n",
         "\\end{bmatrix} + \\epsilon =\\\\\n",
         "\\sum_{i \\in [0, ...,p]} \\beta_i * \\mathbf{x}_i\n",
-        "$$\n",
+        "$$"
+      ],
+      "metadata": {
+        "id": "rchfxvM41TIM"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The algebraic interpretation is to find a linear combination of these p + 1 n-vectores that equals to $y$.\n",
         "\n",
-        "The right hand of fomula is a linear combinations of all $\\mathbf{x}_i`s$ and the all one vector. The geometric interpretation of it is that we would like y to be in the hyperplane created by span of these $p + 1$ vectors. And subsequently write y as a linear combination of them.\n",
+        "This a bit\n",
         "\n",
-        "Now picture gets more clear. For example if  the $p +1 $ vectors  linearly independent, we can think of  them as a basis and thus writing y in terms of them is change of basis for y.\n",
+        "Now picture gets more clear. For examples, in order for system to have a solution, y needs to be in the linear span of $\\mathbf{x_i}$'s. Also, the solution is unique if and only if $\\mathbf{x_i}$'s are linearly independent.\n",
         "\n",
-        "Also, one one can see, the more feature there is compared to the sample size(n), the liklier it gets to have an answer because the vectors are gonna span more of the space.\n",
+        "\n",
+        "Let's construct the  matrix X for the data we sampled. We can check some algebraic measures on matrix X then. (shapeee,the rank,are columns leanr independent) HERE!!!\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "ICHlTFCJ1Nkr"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "X = np.c_[np.ones(100), x]\n",
+        "\n",
+        "X_plus = X @ np.linalg.inv(np.transpose(X) @ X) @ np.transpose(X)\n",
+        "X_plus.shape\n",
+        "y.shape\n",
+        "y_hat = X_plus @ y\n"
+      ],
+      "metadata": {
+        "id": "mHrQR0nhwTOa"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Solve \" X β + ϵ= y\"\n",
+        "Putting all observation in a matrix, helps with summarizing data and giving it mathematical abstraction. HERE!!!!!\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "So we are hoping they all fall on a p dimensional plane becuase we think there are p basis that can span all n points. However the p dimensional plain doesnt have to pass vector 0, so we need p + 1 such scalars to determine where  the plain meets y axes for when all x's are 0.\n",
+        "these  p + 1 numbers are going to determine such plain.\n",
+        "\n",
+        "while it is nice to visualize the data point using second view, we mainly use the first view to solve the system of equations. Let's find such hyperplane for our sample data points ( or n vectors of 2-dimensional )\n",
         "\n",
         "\n"
       ],
       "metadata": {
-        "id": "j61xxxCfAC2X"
+        "id": "Pxpe3yEJhAt_"
       }
     },
     {
@@ -418,22 +447,6 @@
       "metadata": {
         "id": "NKt3SmFvLBge"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "X = np.c_[np.ones(100), x]\n",
-        "\n",
-        "X_plus = X @ np.linalg.inv(np.transpose(X) @ X) @ np.transpose(X)\n",
-        "X_plus.shape\n",
-        "y.shape\n",
-        "y_hat = X_plus @ y\n"
-      ],
-      "metadata": {
-        "id": "mHrQR0nhwTOa"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
