Solution for matrix equation

--- a/notebookes/LinearRegressionMatrix.ipynb
+++ b/notebookes/LinearRegressionMatrix.ipynb
@@ -364,7 +364,6 @@
       "source": [
         "The algebraic interpretation is to find a linear combination of these p + 1 n-vectores that equals to $y$.\n",
         "\n",
-        "This a bit\n",
         "\n",
         "Now picture gets more clear. For examples, in order for system to have a solution, y needs to be in the linear span of $\\mathbf{x_i}$'s. Also, the solution is unique if and only if $\\mathbf{x_i}$'s are linearly independent.\n",
         "\n",
@@ -394,34 +393,25 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "### Solve \" X β + ϵ= y\"\n",
-        "Putting all observation in a matrix, helps with summarizing data and giving it mathematical abstraction. HERE!!!!!\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "So we are hoping they all fall on a p dimensional plane becuase we think there are p basis that can span all n points. However the p dimensional plain doesnt have to pass vector 0, so we need p + 1 such scalars to determine where  the plain meets y axes for when all x's are 0.\n",
-        "these  p + 1 numbers are going to determine such plain.\n",
-        "\n",
-        "while it is nice to visualize the data point using second view, we mainly use the first view to solve the system of equations. Let's find such hyperplane for our sample data points ( or n vectors of 2-dimensional )\n",
-        "\n",
-        "\n"
-      ],
+      "cell_type": "code",
+      "source": [],
       "metadata": {
-        "id": "Pxpe3yEJhAt_"
-      }
+        "id": "FMmg9L5Scwgt"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "**Solution**\n",
+        "###  Solve \" X β + ϵ= y\"\n",
         "\n",
+        "Putting all observation in a matrix, yields one line equation that is equivalent to solve the system of linear equations  that is :\n",
+        "$$ \\textbf{X} \\beta + \\epsilon = y$$\n",
         "\n",
-        "Let's solve $y = X \\beta $ with no error term.\n",
+        "Solving such equation would have been a standard procedure, if there were no error term $\\epsilon$ or uncertanty in other words.\n",
         "\n",
-        "There are multiple ways you can arrive at that. There is one that tries to minimize the $||Ax -b ||$ using deravitive.\n",
+        "Intuitively, we would like a solution that yields the minimum value of $\\epsilon$. But as $\\epsilon$ is an n-dimensional vector, what how do we compare them? One approach is to minimize $||\\epsilon||$ (L2 norm of vector), which is to minimize $||Ax -bX ||$. Minimization can be achieved in various ways, such as using derivatives. HERE!!!\n",
         "\n",
         "My favorite is one that uses some linear algebraic magic.\n",
         "I break it to three observations:\n",
@@ -603,6 +593,15 @@
       ],
       "metadata": {
         "id": "5EkDqnBoybzL"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "while it is nice to visualize the data point using second view, we mainly use the first view to solve the system of equations. Let's find such hyperplane for our sample data points ( or n vectors of 2-dimensional )"
+      ],
+      "metadata": {
+        "id": "1zQD7KnbZLML"
       }
     },
     {
