--- a/notebookes/LinearRegressionMatrix.ipynb
+++ b/notebookes/LinearRegressionMatrix.ipynb
@@ -50,29 +50,10 @@
         "!git config --global user.name \"Amineh Dadsetan\""
       ],
       "metadata": {
-        "id": "19DE6S_AX97z",
-        "outputId": "c8b0971f-60e7-4771-c414-82fb2b4b8f3c",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "19DE6S_AX97z"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "fatal: cannot change to 'AminehTechnicalWritings': No such file or directory\n",
-            "Cloning into 'AminehTechnicalWritings'...\n",
-            "remote: Enumerating objects: 323, done.\u001b[K\n",
-            "remote: Counting objects: 100% (182/182), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (90/90), done.\u001b[K\n",
-            "remote: Total 323 (delta 107), reused 152 (delta 89), pack-reused 141\u001b[K\n",
-            "Receiving objects: 100% (323/323), 3.60 MiB | 10.12 MiB/s, done.\n",
-            "Resolving deltas: 100% (186/186), done.\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -88,7 +69,7 @@
       "metadata": {
         "id": "5j4eSlknAHha"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -99,12 +80,12 @@
       ],
       "metadata": {
         "id": "0W6vmWNrAOcm",
-        "outputId": "7ef2526a-9ae5-4691-cc22-80601d2c932f",
+        "outputId": "c7110c90-0e68-4702-ae9b-40b1df3b398d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -124,10 +105,10 @@
         "## Introduction\n",
         "In this notebook, I would like to go through the linear regression concepts. It's in first chapter of all AI/ML books. Usually the author starts very inncocently by showing some plots of dots, scattered approximately along a line.\n",
         "\n",
-        " Then they flash a bunch of matrixes at you. Just a bit before end of the chapter,  they make an apeal to you to believe it was all about Maximum liklyhood framework and normal probability distribution, all along.\n",
+        " Then they flash a bunch of matrixes at you. Just a bit before end of the chapter,  they make an apeal to you to believe it was all about Maximum liklihood framework and normal probability distribution, all along.\n",
         "\n",
-        "  Maybe it's only me, but I'm always lost after the pages with 10 lines of matrix notation.\n",
-        " That's why I wanted to gain a cohesive understanding of the whole flow. This notebook is what I have learnt about it.\n",
+        "  Maybe it's only me, but I'm always lost after the matrix notation.\n",
+        " That's why I wanted to gain a cohesive understanding of the whole flow and how each step leads to another. This notebook is what I have learnt about it.\n",
         "\n",
         "\n",
         "I have created a [jupyter notebook](https://colab.research.google.com/github/aminehd/AminehTechnicalWritings/blob/main/DistributionsOfAspectsOfData.ipynb) to generate some random data.\n",
@@ -160,7 +141,7 @@
       "metadata": {
         "id": "OSu41WDF_GAe"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -179,9 +160,9 @@
           "height": 452
         },
         "id": "C8IKsSGKKfew",
-        "outputId": "0343d73a-ee9a-4d55-ccf2-0ee32481bb97"
+        "outputId": "c5625154-88e2-4197-ceef-d767ca138cec"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "display_data",
@@ -365,11 +346,12 @@
         "The algebraic interpretation is to find a linear combination of these p + 1 n-vectores that equals to $y$.\n",
         "\n",
         "\n",
-        "Now picture gets more clear. For examples, in order for system to have a solution, y needs to be in the linear span of $\\mathbf{x_i}$'s. Also, the solution is unique if and only if $\\mathbf{x_i}$'s are linearly independent.\n",
+        "We have a more clear picture of when the system has a solution. For examples, in order for system to have a solution, y needs to be in the linear span of $\\mathbf{x_i}$'s. Also, the solution is unique if and only if $\\mathbf{x_i}$'s are linearly independent.\n",
         "\n",
         "\n",
-        "Let's construct the  matrix X for the data we sampled. We can check some algebraic measures on matrix X then. (shapeee,the rank,are columns leanr independent) HERE!!!\n",
-        "\n"
+        "Let's construct the  matrix X for the data we sampled. We can check some algebraic measures on matrix X then. I would suggest try to answer a few questions for yourself, such as\n",
+        "1. what is the shape of X?\n",
+        "2. what is the rank of X?\n"
       ],
       "metadata": {
         "id": "ICHlTFCJ1Nkr"
@@ -380,17 +362,28 @@
       "source": [
         "\n",
         "X = np.c_[np.ones(100), x]\n",
-        "\n",
-        "X_plus = X @ np.linalg.inv(np.transpose(X) @ X) @ np.transpose(X)\n",
-        "X_plus.shape\n",
-        "y.shape\n",
-        "y_hat = X_plus @ y\n"
+        "print(f\"Shape of X: {X.shape}\")\n",
+        "print(f\"Rank of X: {np.linalg.matrix_rank(X)}\")\n",
+        "\n"
       ],
       "metadata": {
-        "id": "mHrQR0nhwTOa"
+        "id": "mHrQR0nhwTOa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0bddf682-5413-4e9c-a54d-12400b809051"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Shape of X: (100, 2)\n",
+            "Rank of X: 2\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -421,13 +414,27 @@
         "\n",
         "3. Finding such matrix really depends on X features For example if X is a square matrix with all orthogonal columns, no such projection is needed cause X spans the whole dimension. If X has orthogonal columns but not square, that projection is $XX^T$. In general case it is $X(X^TX)^{-1}X^T$. Lets call this $X^+$ from now on.  The proof has to do with svd and stuff.\n",
         "\n",
-        "Lets pick a fairly big sample from population data set and construct $X$ and $X^+$ so as to calculate the projection matrix.\n",
+        "Lets calculate $X^+$ for our sample. HERE!!!\n",
         "\n",
         "\n"
       ],
       "metadata": {
         "id": "cwhNfPNNkFAH"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X_plus = X @ np.linalg.inv(np.transpose(X) @ X) @ np.transpose(X)\n",
+        "X_plus.shape\n",
+        "y.shape\n",
+        "y_hat = X_plus @ y"
+      ],
+      "metadata": {
+        "id": "JHfWx2cPtnLd"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
